<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Delivery24</string>
    <string name="title_dashboard">الرئيسية</string>
    <!--<string name="google_maps_key">AIzaSyBYiC0IfcpWwEuGS-9y0xrBDVTUWq8i6dw</string>-->
    <!--<string name="google_maps_key">AIzaSyBG17XsWDw65bc0KavRLkARmFghjY4Aaeo</string>-->
    <string name="google_maps_key">AIzaSyB42JPX4orAh6y49aRh4rfBO89VtKebBRQ</string>
    <string name="storeplace">Store Place</string>
    <string name="storename"> Store Name</string>
    <string name="refuse">Refused</string>
    <string name="accept">accept</string>
    <string name="taslemlocation">Delivery location</string>
    <string name="recivedlocation">Receiving location</string>
    <string name="productprice">The price of the product</string>
    <string name="paymentway">Payment method</string>
    <string name="neworder">New Order</string>
    <string name="yourLocation">Your location on the map</string>
    <string name="mandob">The name of the delegate</string>
    <string name="client">Client</string>
    <string name="moredetails">More Details</string>
    <string name="lessdetails">Less Details</string>
    <string name="addOfferSucess">Your offer has been added successfully</string>
    <string name="erroroccur">An error occurred, try again</string>
    <string name="offer">Add a quote</string>
    <string name="save">Save</string>
    <string name="complet">Enter a new quote</string>
    <string name="tab_1">Main</string>
    <string name="commplete">Complete</string>
    <string name="ordernotfound">There are no requests</string>
    <string name="notcommplete">not complete</string>
    <string name="start">Start the journey</string>
    <string name="offernotfound">There are no offers for your order</string>
    <string name="orderfromgoogle">Your order from Google stores and there are no products inside</string>
    <string name="waiting">wait ...</string>
    <string name="procenotdetected">The price is not specified</string>
    <string name="chating">Chat</string>
    <string name="maping">Map</string>
    <string name="connected">Connect</string>
    <string name="orderdetails">Details of requests</string>
    <string name="banky">credit card</string>
    <string name="card">Bank transfer</string>
    <string name="waitstart">Waiting for the flight to start</string>
    <string name="startnow1">start now</string>
    <string name="gotoclient">Waiting to go to the customer</string>
    <string name="gotoclientnow">Go now</string>
    <string name="waitdeliver">Awaiting delivery</string>
    <string name="gotoclientway">On the way to the customer</string>
    <string name="orderdelivery">follow up with the order</string>
    <string name="recievied">sent delivered handed</string>
    <string name="clientt">Client</string>
    <string name="stor">the shop</string>
    <string name="myAccount">My Account</string>
    <string name="menu">The Menu</string>
    <string name="myOrder">My Orders</string>
    <string name="notificatin">Notification</string>
    <string name="username"><font size="16">User Name</font></string>
    <string name="register">My Account</string>
    <string name="register_in_login">Register</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="registerfb">continue with facebook</string>
    <string name="password"><font size="16">Password</font></string>
    <string name="usererror">Username or password incorrect</string>
    <string name="login">login</string>
    <string name="loginsuccess">login success</string>
    <string name="commpletefileds">Please complete the details</string>
    <string name="available_banks">available banks</string>
    <string name="error_add">An error occurred, try again</string>
    <string name="bank_name">  Bank Name : </string>
    <string name="account_num"> Account Number : </string>
    <string name="iban_num"> IBAN :  </string>
    <string name="account_owner">owner name</string>
    <string name="phone_num">phone number</string>
    <string name="client_bank">client bank</string>
    <string name="birthdate">birth date</string>
    <string name="pay_img">اAdd the receipt picture</string>
    <string name="send">Send</string>
    <string name="paymentinfo">payment information</string>
    <string name="addusername">Enter the name of the account holder</string>
    <string name="addphone">Enter the mobile number</string>
    <string name="addbank">Enter the name of the bank</string>
    <string name="addpayimg">Add the receipt photo</string>
    <string name="addinfosuccess">Your information has been added successfully</string>
    <string name="no_notification">You have no notifications</string>
    <string name="writemsg">Write your message</string>
    <string name="ordernumber">Order number</string>
    <string name="editprofile">Edit profile</string>
    <string name="help">Help</string>
    <string name="generalSettings">General settings</string>
    <string name="language">Language settings</string>
    <string name="usage">Usage policy</string>
    <string name="rateapp">Rate app</string>
    <string name="contactus">Contact us</string>
    <string name="aboutapp">About the app</string>
    <string name="howitwork">How delivery24 works</string>
    <string name="logout">Logout</string>
    <string name="message">Message</string>
    <string name="enteryourmsg">Enter your message</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="terms">Terms and conditions</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enterphone">Enter phone number</string>
    <string name="fullname">Full name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="signup">Sign up</string>
    <string name="enterfullname">Please enter full name</string>
    <string name="enteremail">Please enter your email</string>
    <string name="enterpassword">Please enter your password</string>
    <string name="selectgender">Please select gender</string>
    <string name="phone">Phone</string>
    <string name="faceLogin">Login with facebook</string>
    <string name="check">Check</string>
    <string name="enterusername">Please enter username</string>
    <string name="gmailLogin">Login with Gmail</string>
    <string name="or">Or</string>
    <string name="smslogin">Login with Phone number</string>
    <string name="bylogin">By loging in you agree on</string>
    <string name="saveinfo">Save info</string>
    <string name="cancel">canceled</string>
    <string name="notes">Notes</string>
    <string name="complainReason">complain Reason</string>
    <string name="pleasefillMissinginfo">Fill out the missing information</string>
    <string name="uploadphoto">upload photo</string>
    <string name="close">close</string>
    <string name="resones">Please add the reason for canceling the order</string>
    <string name="areUsureLgout">Are you sure you want to logout?</string>
    <string name="failedtoLoad">Failed to load api</string>
    <string name="loading">Loading...</string>
    <string name="facebook_app_id" translatable="false">626197584833300</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb626197584833300</string>
    <string name="default_web_client_id" translatable="false">629890567348-sj39lpug5862k9lmf8ogamlb7mf1o37v.apps.googleusercontent.com</string>
    <string name="firebase_database_url" translatable="false">https://marakez.firebaseio.com</string>
    <string name="gcm_defaultSenderId" translatable="false">629890567348</string>
    <string name="google_api_key" translatable="false">AIzaSyCTSg5TkWoyhF097h6FIpMduPvOzfw0wvE</string>
    <string name="google_app_id" translatable="false">1:629890567348:android:f78d5852e9e73e4b41dbe1</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyCTSg5TkWoyhF097h6FIpMduPvOzfw0wvE</string>
    <string name="google_storage_bucket" translatable="false">marakez.appspot.com</string>
    <string name="project_id" translatable="false">marakez</string>
    <string name="profileUpdated">The data has been modified successfully</string>
    <string name="Inventory">Inventory of weekly and monthly requests</string>
    <string name="weeklynumber">weekly number</string>
    <string name="amount">with amount</string>
    <string name="ryal">SR</string>
    <string name="monthlynumber">Monthly number</string>
    <string name="order">Order</string>
    <string name="pay"> Pay the application account</string>
    <string name="DeliveryCharge">Delivery Charge</string>
    <string name="Connecting">  Connecting</string>
    <string name="Ordernumber">Order number : </string>
    <string name="specify_the_reason">  Please specify the reason for canceling the request:</string>
    <string name="Review_application_cases">Review application cases</string>
    <string name="Acceptable_requests"> Acceptable requests</string>
    <string name="account_details">account details</string>
    <string name="total_request">Total requests for the month</string>
    <string name="total">Total</string>
    <string name="clientName">Client Name :</string>
    <string name="order_date">Order Date :</string>
    <string name="order_cost">Order Cost :</string>
    <string name="TotalBalance">TotalBalance</string>
    <string name="OrderCount">OrderCount</string>
    <string name="OrderCost">OrderCost</string>
    <string name="me">Me</string>
    <string name="recie_place">Receive Place</string>
    <string name="delivery_place">Delivery Place</string>
    <string name="KM"> K.M</string>


</resources>