<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/mainContactUs"
    >


    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/logo" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:gravity="start|center"
                android:text="@string/fullname"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Edname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/username"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/sign_background"
                android:hint="@string/enterusername"
                android:inputType="textPersonName"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:singleLine="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edname"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="start|center"
                android:text="@string/email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Edemail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/email"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/sign_background"
                android:hint="@string/enteremail"
                android:inputType="textEmailAddress"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:singleLine="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textsub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edemail"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="start|center"
                android:text="@string/phone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Edphone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/textsub"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/sign_background"
                android:hint="@string/enterphone"
                android:inputType="phone"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:singleLine="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Edphone"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="start|center"
                android:text="@string/message"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Edmsg"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/text"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/sign_background"
                android:gravity="start"
                android:hint="@string/enteryourmsg"
                android:inputType="textMultiLine"
                android:paddingStart="7dp"
                android:paddingTop="7dp"
                android:paddingEnd="7dp"
                android:paddingBottom="7dp"
                android:singleLine="true"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/sendBT"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/Edmsg"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/phone_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>