<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/generalSettings"
                android:textColor="@color/cardRed"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/profarrow"
                    android:text="@string/editprofile" />

                <ImageView
                    android:id="@+id/profarrow"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/left"
                    android:rotation="180" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/langarrow"
                    android:text="@string/language" />

                <ImageView
                    android:id="@+id/langarrow"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/left"
                    android:rotation="180" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/termsofuse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/termarrow"
                    android:text="@string/terms" />

                <ImageView
                    android:id="@+id/termarrow"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/left"
                    android:rotation="180" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/usagepolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/usagepolicyarrow"
                    android:text="@string/usage" />

                <ImageView
                    android:id="@+id/usagepolicyarrow"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/left"
                    android:rotation="180" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/rateapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/rateapparrow"
                    android:text="@string/rateapp" />

                <ImageView
                    android:id="@+id/rateapparrow"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/left"
                    android:rotation="180" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/contactus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/contactusarrow"
                    android:text="@string/contactus" />

                <ImageView
                    android:id="@+id/contactusarrow"
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/left"
                    android:rotation="180" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/logout" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/help"
                android:textColor="@color/cardRed"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/aboutapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/aboutapp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/howitwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/howitwork" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/gray" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>